# Poly-split

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
graphics/: poly-split.pro  renderarea.cpp
lib/poly/: CMakeLists.txt  line.cpp  line.h  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.h  polygon.hpp  segment.cpp  vector.cpp  vector.h  vector.hpp
test/: point_test.cpp  poly_test.cpp
